--- a/frontend/src/app/shared/topbar/topbar.component.scss
+++ b/frontend/src/app/shared/topbar/topbar.component.scss
@@ -18,3 +18,20 @@
       }
     }
   }
+
+  .topbar-icons {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+
+    .bg-green-400 {
+      margin-right: 1em; 
+      
+    }
+
+    button {
+        margin-right: 1em; 
+        
+    }
+  }
