--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -46,6 +46,20 @@
             Plot flexpart
           </mat-list-item>
         </mat-expansion-panel>
+
+        <mat-expansion-panel>
+          <mat-expansion-panel-header>
+            <mat-panel-title>
+              <div class="flex flex-row space-x-4 justify-center">
+                Gauss model
+              </div>
+            </mat-panel-title>
+          </mat-expansion-panel-header>
+          <mat-list-item >
+            Nothing here !
+          </mat-list-item>
+        </mat-expansion-panel>
+
       </mat-nav-list>
     </mat-sidenav>
 
