--- a/frontend/src/app/shared/topbar/topbar.component.scss
+++ b/frontend/src/app/shared/topbar/topbar.component.scss
@@ -17,8 +17,8 @@
         align-self: center;
       }
     }
-  }
 
+    
   .topbar-icons {
     display: flex;
     flex-direction: row;
@@ -27,7 +27,8 @@
 
     .bg-green-400 {
       margin-right: 1em; 
-      
+      margin-top: 1em;
+      margin-bottom: 1em;
     }
 
     button {
@@ -35,3 +36,5 @@
         
     }
   }
+
+}
