--- a/frontend/src/app/shared/map-plot-list/map-plot-list-item/map-plot-list-item.component.scss
+++ b/frontend/src/app/shared/map-plot-list/map-plot-list-item/map-plot-list-item.component.scss
@@ -14,3 +14,8 @@
 .clickable {
     cursor: pointer;
 }
+
+.scrollable-list {
+    max-height: 300px; /* Set your desired max height */
+    overflow-y: auto;
+}
