--- a/frontend/src/app/flexpart/retrieve-meteo-simple/retrieve-meteo-simple.component.html
+++ b/frontend/src/app/flexpart/retrieve-meteo-simple/retrieve-meteo-simple.component.html
@@ -4,7 +4,8 @@
 
   <app-area-input formControlName="area"></app-area-input>
 
-  <mat-form-field class="form-control" appearance="outline" placeholder="Horizontal resolution [°]">
+  <mat-form-field class="form-control" appearance="fill" placeholder="Horizontal resolution [°]">
+    <!--<mat-label appearance="fill"> Horizontal Resolution</mat-label>-->
     <mat-select formControlName="gridres">
       <mat-option *ngFor="let option of gridResolutions" [value]="option">
         {{ option }}
@@ -12,8 +13,9 @@
     </mat-select>
   </mat-form-field>
 
-  <mat-form-field class="form-control" appearance="outline" placeholder="Time step">
+  <mat-form-field class="form-control" appearance="fill" placeholder="Time step">
     <mat-select formControlName="timeStep">
+      
       <mat-option *ngFor="let option of timeSteps" [value]="option.key">
         {{ option.value }}
       </mat-option>
