--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -6,7 +6,8 @@
     <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="flex-col py-3">
         <mat-form-field
             class = "w-56"
-            appearance="outline">
+            appearance="fill"
+            >
             <mat-label> Email </mat-label>
             <input
                 matInput
@@ -16,7 +17,7 @@
 
         <mat-form-field
         class = "w-56"
-            appearance="outline">
+            appearance="fill">
             <mat-label> Password </mat-label>
             <input
                 matInput
