--- a/frontend/src/app/shared/form/location-form/location/location.component.html
+++ b/frontend/src/app/shared/form/location-form/location/location.component.html
@@ -1,8 +1,9 @@
 <div class = "flex flex-row items-start max-h-14">
     <fieldset [formGroup] = "form" (keydown.enter)="onEnter()" class = "flex flex-row justify-around pt-0">
         <mat-form-field
-        appearance="outline"
-        class = "w-20"
+        appearance="fill"
+        class = "w-35"
+        
         >
             <mat-label> Long. </mat-label>
             <input
@@ -13,8 +14,8 @@
         </mat-form-field>
 
         <mat-form-field
-        class="w-20"
-        appearance="outline">
+        class="w-35"
+        appearance="fill">
             <mat-label> Latit. </mat-label>
             <input
             type="number"
