--- a/frontend/src/app/shared/form/datetime-picker/datetime-picker/datetime-picker.component.scss
+++ b/frontend/src/app/shared/form/datetime-picker/datetime-picker/datetime-picker.component.scss
@@ -1,5 +1,6 @@
 
 @import '@angular/material/theming';
+@import '~@angular/material/prebuilt-themes/indigo-pink.css';
 //@use '@angular/material' as mat;
 
 @include mat-core();
