--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -3,7 +3,7 @@
 @tailwind utilities;
 // @import '../node_modules/@geoman-io/leaflet-geoman-free/dist/leaflet-geoman.css';
 
-
+@import '~@angular/material/prebuilt-themes/indigo-pink.css';
 
 
 @layer components {
