--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,9 +1,11 @@
+@import '~@angular/material/prebuilt-themes/indigo-pink.css';
+@import './theme.scss';
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 // @import '../node_modules/@geoman-io/leaflet-geoman-free/dist/leaflet-geoman.css';
 
-@import '~@angular/material/prebuilt-themes/indigo-pink.css';
 
 
 @layer components {
