--- a/frontend/src/app/shared/form/area-input/area-input.component.scss
+++ b/frontend/src/app/shared/form/area-input/area-input.component.scss
@@ -1,7 +1,24 @@
-mat-form-field {
-    width: 40px;
 
+mat-form-field {
+   
+    margin : 8px;
     mat-label {
         font-size: 10px;
     }
+}
+
+.position {
+  border: 1px solid #ccc; // A light grey border
+  padding: 1rem; // Some padding inside the border
+  border-radius: 4px; // Optional: rounded corners for the border
+  background-color: #f9f9f9; // A light background color to distinguish the group
+  display: flex; // Assuming you want to keep them in a row
+  gap: 1rem; // Adds space between the child elements
+  align-items: center; // Aligns items vertically in the center if they have different heights
+}
+
+// Adjust the width of mat-form-field if necessary
+.position .mat-form-field {
+  width: 20%; // Adjust the width as needed or use a different class to control it
+  margin-bottom: 0; // Removes any default margin below the mat-form-field
 }
