--- a/frontend/src/app/shared/form/area-input/area-input.component.html
+++ b/frontend/src/app/shared/form/area-input/area-input.component.html
@@ -1,7 +1,5 @@
 
-<div class="flex flex-row items-start max-h-14">
-
-    <fieldset [formGroup]="form" class="flex flex-row">
+    <fieldset [formGroup]="form" class="flex flex-row mb-4">
         <div class="position"
             style="
                 border: 1px solid #ccc; 
@@ -63,4 +61,3 @@
         </div>
 
     </fieldset>
-</div>
