--- a/frontend/src/app/shared/form/area-input/area-input.component.html
+++ b/frontend/src/app/shared/form/area-input/area-input.component.html
@@ -1,5 +1,6 @@
 
     <fieldset [formGroup]="form" class="flex flex-row mb-4">
+        <!-- This div build the borders around the location input-->
         <div class="position"
             style="
                 border: 1px solid #ccc; 
