legend:area for flexpart

--- a/frontend/src/app/shared/form/area-input/area-input.component.html
+++ b/frontend/src/app/shared/form/area-input/area-input.component.html
@@ -1,6 +1,7 @@
 
     <fieldset [formGroup]="form" class="flex flex-row mb-4">
         <!-- This div build the borders around the location input-->
+        
         <div class="position"
             style="
                 border: 1px solid #ccc; 
@@ -8,7 +9,7 @@
                 margin: 4px;
                 background-color: #f9f9f9;">
 
-
+            <legend class="text-sm">Area:</legend>
             <mat-form-field
             appearance="fill"
             class="w-20"
