add toggle mode button (not working)

--- a/frontend/src/app/shared/form/location-form/location/location.component.html
+++ b/frontend/src/app/shared/form/location-form/location/location.component.html
@@ -31,5 +31,10 @@
         <button type="button" class="h-7" matTooltip="Read the coords from the marker position" (click)="setFromMarker()">
             <mat-icon class="text-base">read_more</mat-icon>
         </button>
+        
     </div>
+    <!-- Button to toggle here -->
+    <button type="button" class="h-7" matTooltip="Switch to double-marker mode" (click)="setFromMarker()">
+        <mat-icon class="text-base">looks_two</mat-icon>
+    </button>
 </div>
