console working for Attack types

--- a/frontend/src/app/atp45/atp45-run/area-popup/area-popup.component.html
+++ b/frontend/src/app/atp45/atp45-run/area-popup/area-popup.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="message || alpha || delta || foxtrot || golf || india || miker || papaa || papax || tango || gentext">
+<!-- <div *ngIf="message || alpha || delta || foxtrot || golf || india || miker || papaa || papax || tango || gentext">
     <p>{{ message }}</p>
     <p *ngIf="alpha">Alpha: {{ alpha }}</p>
     <p *ngIf="delta">Delta: {{ delta }}</p>
@@ -9,4 +9,4 @@
     <p *ngIf="papaa">Papaa: {{ papaa }}</p>
     <p *ngIf="papax"> Papax: {{  papax }}</p>
     <p *ngIf="gentext"> Gentext {{ gentext }}</p>
-</div>
+</div> -->
