--- a/frontend/src/app/atp45/atp45-run/meteo-form/meteo-form.component.html
+++ b/frontend/src/app/atp45/atp45-run/meteo-form/meteo-form.component.html
@@ -1,4 +1,4 @@
 <form [formGroup]="meteoForm">
     <app-wind-form *ngIf="withWind" [parentForm]="meteoForm" (windDataChange)="handleWindDataChange($event)"></app-wind-form>
-    <app-stability-form *ngIf="withStability" [parentForm]="meteoForm"></app-stability-form>
+    <app-stability-form *ngIf="withStability" [parentForm]="meteoForm" (stabilityClassChange)="handleStabilityClassChange($event)"></app-stability-form>
 </form>
