--- a/frontend/src/app/shared/map-plot-list/plot-details-dialog/plot-details-dialog.component.html
+++ b/frontend/src/app/shared/map-plot-list/plot-details-dialog/plot-details-dialog.component.html
@@ -1,18 +1,39 @@
 <h1 mat-dialog-title>Plot Details - ID: {{data.plotId}}</h1>
 <div>
+
+  <!-- 
+    messageType : {CDM, CBRN 1, CBRN 2 , or CBRN 3} 
+    attackType : {CHEM or BIO}
+    Alpha : ??
+    Delta : {date in DDhhmmZMMMYYYY}
+    Foxtrot : {location in MGRS}
+    Golf : ??
+    India : ??
+    Miker : ??
+    PAPAA : {release area(center)} /-/ {Hazard area (around center)}/-/
+    PAPAX : date  DDhhmmZMMMYYYY / MGRS: {location in mgrs}
+    TANGO: ??
+    Yankee : ??
+    Zulu : ??
+    Gentext : {INFO BASED ON SIMPLIFIED PROCEDURES CALCULATION (if non-detailed), or TYPE A CASE 1 (if detailed)}
+  -->
+  <p> CBRN {{data.messageType}} {{data.attackType}}</p>
   <p>ALPHA/{{data.alpha}}</p>
   <p>DELTA/{{data.delta}}</p>
-  <p>FOXTROT/{{data.foxtrot }}</p>
+  <p>FOXTROT/MGRS:{{data.foxtrot }}</p>
   <p>GOLF/{{data.golf }}</p>
   <p>INDIA/{{data.india }}</p>
   <p>MIKER/{{data.miker }}</p>
   <p>PAPAA/{{data.papaa }}</p>
   <p>PAPAX/{{ data.papax }}</p>
   <p>TANGO/{{data.tango}}</p>
+  <p>YANKEE/{{data.yankee}}</p>
+  <p>ZULU/{{data.zulu}}</p>
   <p>GENTEXT/CBRNINFO/{{ data.gentext }}</p>
 </div>
 <div>
-  Chemical Missile with Air Contaminating agent strike at 456BE5
+  <!-- Textual message for non-specialists to adapt-->
+  Chemical Missile with Air Contaminating agent strike at 17TLG27849...
 </div>
 <div mat-dialog-actions>
   <button mat-button mat-dialog-close>Close</button>
