--- a/frontend/src/app/shared/leaflet-map/legend-colorbar/legend-colorbar.component.html
+++ b/frontend/src/app/shared/leaflet-map/legend-colorbar/legend-colorbar.component.html
@@ -1,8 +1,18 @@
+<div class="tabs">
+  <button (click)="setUnit('kg')" [class.active]="units === 'kg'"> Mass (kg)</button>
+  <button (click)="setUnit('bq')" [class.active]="units === 'bq'"> Activity (kBq / m²)</button>
+</div>
+
+
 <!-- <ng-template *ngIf="ticks !== undefined"> -->
 <div
   class="fixed w-32 bottom-9 right-14 bg-white rounded-lg border-4 p-2 flex flex-row justify-between"
   style="z-index: 1000"
 >
+<div class="tabs">
+  <button (click)="setUnit('kg')" [class.active]="units === 'kg'"> Mass (kg)</button>
+  <button (click)="setUnit('bq')" [class.active]="units === 'bq'"> Activity (kBq / m²)</button>
+</div>
 
   <div class="flex flex-col-reverse">
     <div
@@ -21,7 +31,7 @@
   </div>
 
   <div class="self-center">
-    <div class="rotate-90 translate-x-2"> {{ units }} </div>
+    <div class="rotate-90 translate-x-2"> {{ unitLabel }} </div>
   </div>
 </div>
 <!-- </ng-template> -->
