--- a/frontend/src/app/shared/leaflet-map/legend-colorbar/legend-colorbar.component.scss
+++ b/frontend/src/app/shared/leaflet-map/legend-colorbar/legend-colorbar.component.scss
@@ -1,11 +1,11 @@
-.offset1 {
+/* .offset1 {
   transform: translateY(11px);
 }
 
 .offset2 {
   transform: translateY(-11px);
 }
-
+ */
 .legend-container {
   position: fixed;
   width: calc(0.43 * var(--legendBoxSize));
